# LangchainVoiceAgent

./: .gitignore  README.md
Backend/: .env.example  .gitignore  README.md  pyproject.toml
Backend/MisoTTS/: server.py
Backend/app/: events.py  main.py
Backend/app/core/agent/: agent.py  prompt.py
Backend/app/core/stt/AssemblyAI/: AssemblyAI_client.py  AssemblyAI_service.py
Backend/app/core/tts/Cartesia/: Cartesia_Client.py  Cartesia_Service.py
Backend/app/core/tts/Kokoro/: Kokoro_Client.py  Kokoro_Service.py
Backend/app/core/tts/Miso/: Miso_Client.py  Miso_Service.py
Frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.css  App.jsx  main.jsx
Frontend/src/components/: AgentAvatar.css  AgentAvatar.jsx  CallControls.css  CallControls.jsx  ConversationList.css  ConversationList.jsx  LiveTranscript.css  LiveTranscript.jsx  PhoneFrame.css  PhoneFrame.jsx  SettingsPanel.css  SettingsPanel.jsx  StatusBar.css  StatusBar.jsx
Frontend/src/hooks/: useAudioCapture.js  useAudioPlayback.js  useCallState.js  useWebSocket.js
Frontend/src/styles/: global.css  variables.css
Frontend/src/utils/: format.js
