[project]
name = "backend"
version = "0.1.0"
description = "LangChain voice agent backend with AssemblyAI STT, Ollama agent, and Cartesia TTS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]